# sigyn

./: .gitignore  README.md  SECURITY.md  index.html  install.sh  package-lock.json  package.json  tauri-build.sh  tsconfig.json  vite.config.ts
docs/: architecture.md  index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  error.rs  ipc.rs  lib.rs  macos_auth.rs  main.rs  model.rs  store.rs
src/lib/: api.ts  types.ts
