[package]
name = "sigyn"
version = "0.1.0"
edition = "2021"
description = "Local-first macOS desktop app and CLI for managing environment configurations from an encrypted local store."
readme = "../README.md"
autobins = false
default-run = "sigyn-desktop"

[lib]
name = "sigyn"
path = "src/lib.rs"

[[bin]]
name = "sigyn-desktop"
path = "src/main.rs"

[[bin]]
name = "sigyn"
path = "src/bin/sigyn.rs"

[dependencies]
aes-gcm-siv = "=0.11.1"
base64 = "=0.22.1"
clap = { version = "=4.5.60", features = ["derive"] }
directories = "=6.0.0"
rand = "=0.10.0"
rusqlite = { version = "=0.38.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.10.3", features = ["tray-icon"] }
thiserror = "=2.0.18"
uuid = { version = "=1.22.0", features = ["v4", "serde"] }
zeroize = "=1.8.1"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "=0.6.2", default-features = false, features = ["std"] }
core-foundation = "=0.10.1"
objc2 = { version = "=0.6.4", default-features = false, features = ["std"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["std", "NSError", "NSString"] }
objc2-local-authentication = { version = "=0.3.2", default-features = false, features = ["std", "LAContext", "LAError", "block2"] }
security-framework = { version = "=3.7.0", features = ["OSX_10_15"] }
security-framework-sys = { version = "=2.17.0", features = ["OSX_10_15"] }
